# RayTracer

./: CMakeLists.txt  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  hittable_list.h  main.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  utils.h  vec3.cpp  vec3.h
common/: camera.h  color.h  ray.h  std_image.h  utils.h
raytracerinWeekend/: hittable.h  main.cpp  sphere.h
raytracerinWeekend/result/: 11.ppm  9.6.ppm
raytracernextweek/: aabb.h  aarect.h  box.h  bvh_node.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  perlin.h  sphere.h  texture.h
raytracernextweek/result/: 10.ppm  2.ppm  4.ppm
result/: 10.3.ppm  final.ppm
